<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dokdo"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tv_history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="교육정보화 연구대회 주저리" />

    <TextView
        android:id="@+id/tv_history_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="앱 제목 이미지로 넣기"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAct00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:alpha="0.3"
            android:textSize="16sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            
            android:background="@drawable/subtitle"
            
            android:text="@string/act1_history" />

        <ImageView
            android:id="@+id/ivAct00"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/tvAct00"
            android:layout_centerHorizontal="true"
            android:alpha="0.3"
            android:src="@drawable/subtitle_top" />

        <TextView
            android:id="@+id/tvAct11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivAct00"
            android:layout_centerHorizontal="true"
            android:background="@drawable/subtitle"
            android:textSize="16sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/act0_mypage" />

        <ImageView
            android:id="@+id/ivAct11"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/tvAct11"
            android:layout_centerHorizontal="true"
            android:src="@drawable/subtitle_top2" />

        <ImageView
            android:id="@+id/ivMy"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/tvAct11"
            android:layout_centerHorizontal="true"
            android:src="@drawable/mycha" />

        <TextView
            android:id="@+id/tvAct22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/tvAct11"
            android:layout_marginRight="16dp"
            android:alpha="0.3"
            android:background="@drawable/subtitle"
            android:textSize="16sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/act2_world" />

        <ImageView
            android:id="@+id/ivAct22"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/ivAct11"
            android:layout_marginRight="20dp"
            android:alpha="0.3"
            android:src="@drawable/subtitle_top" />

        <ImageView
            android:id="@+id/ivAct33"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/ivAct11"
            android:layout_marginLeft="20dp"
            android:alpha="0.3"
            android:src="@drawable/subtitle_top" />

        <TextView
            android:id="@+id/tvAct33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@+id/tvAct11"
            android:layout_marginLeft="16dp"
            android:alpha="0.3"
            android:textSize="16sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:background="@drawable/subtitle"
            android:text="@string/act4_quiz" />

        <TextView
            android:id="@+id/tvAct44"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivAct11"
            android:layout_centerHorizontal="true"
            android:alpha="0.3"
            android:background="@drawable/subtitle"
            android:textSize="16sp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/act3_matching_card" />

        <ImageView
            android:id="@+id/ivAct44"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_below="@+id/tvAct44"
            android:layout_centerHorizontal="true"
            android:alpha="0.3"
            android:src="@drawable/subtitle_top" />

        <TextView
            android:id="@+id/tvAct55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/ivAct33"
            android:alpha="0.3"
            android:layout_marginLeft="16dp"
            android:background="@drawable/subtitle"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:text="@string/act5_nature"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivAct55"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
              android:layout_marginLeft="20dp"
            android:layout_below="@+id/tvAct55"
            android:alpha="0.3"
            android:src="@drawable/subtitle_top" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin = "10dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/tv_ActivityMsg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/detail_bg"
                 />

            <ImageButton
                android:id="@+id/btn_main_start"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:scaleType="fitXY"
                android:src="@drawable/btn_main_start" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="인천 안남초등학교 교사 이진태, 교사 양의석" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="인천 완정초등학교 교사 김신형" />
    </LinearLayout>

</LinearLayout>